<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    android:id="@+id/edit_note_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <ImageButton
            android:id="@+id/button_close_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/ic_close_black_24dp" />

        <ImageButton
            android:id="@+id/button_set_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_date_range_black_24dp" />

        <ImageButton
            android:id="@+id/button_set_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@id/button_set_date"
            android:background="@drawable/ic_color_lens_black_24dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.github.zagum.switchicon.SwitchIconView
            android:id="@+id/main_task_view"
            android:layout_width="@dimen/task_icon_size"
            android:layout_height="@dimen/task_icon_size"
            android:layout_margin="8dp"
            app:si_animation_duration="500"
            app:si_disabled_alpha=".3"
            app:si_enabled="false"
            app:si_no_dash="true"
            app:srcCompat="@drawable/ic_main" />

        <com.github.zagum.switchicon.SwitchIconView
            android:id="@+id/urgent_task_view"
            android:layout_width="@dimen/task_icon_size"
            android:layout_height="@dimen/task_icon_size"
            android:layout_margin="8dp"
            app:si_animation_duration="500"
            app:si_disabled_alpha=".3"
            app:si_enabled="false"
            app:si_no_dash="true"
            app:srcCompat="@drawable/ic_urgent" />

        <com.github.zagum.switchicon.SwitchIconView
            android:id="@+id/business_task_view"
            android:layout_width="@dimen/task_icon_size"
            android:layout_height="@dimen/task_icon_size"
            android:layout_margin="8dp"
            app:si_animation_duration="500"
            app:si_disabled_alpha=".3"
            app:si_enabled="false"
            app:si_no_dash="true"
            app:srcCompat="@drawable/ic_business" />

        <com.github.zagum.switchicon.SwitchIconView
            android:id="@+id/skills_task_view"
            android:layout_width="@dimen/task_icon_size"
            android:layout_height="@dimen/task_icon_size"
            android:layout_margin="8dp"
            app:si_animation_duration="500"
            app:si_disabled_alpha=".3"
            app:si_enabled="false"
            app:si_no_dash="true"
            app:srcCompat="@drawable/ic_skills" />

        <com.github.zagum.switchicon.SwitchIconView
            android:id="@+id/buying_task_view"
            android:layout_width="@dimen/task_icon_size"
            android:layout_height="@dimen/task_icon_size"
            android:layout_margin="8dp"
            app:si_animation_duration="500"
            app:si_disabled_alpha=".3"
            app:si_enabled="false"
            app:si_no_dash="true"
            app:srcCompat="@drawable/ic_buying" />

    </LinearLayout>

    <EditText
        android:id="@+id/title_edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#0000"
        android:hint="@string/title"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/text_edit_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0000"
        android:gravity="top"
        android:hint="@string/text"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="20dp" />
    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        fab:fab_addButtonColorNormal="@color/white"
        fab:fab_addButtonColorPressed="@color/white_pressed"
        fab:fab_addButtonSize="mini"
        fab:fab_addButtonPlusIconColor="@color/half_black"
        fab:fab_expandDirection="down"
        fab:fab_labelStyle="@style/menu_labels_style"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_size="mini"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_title="Click to remove"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_colorPressed="@color/white_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="Set bottom menu enabled/disabled"
            fab:fab_colorPressed="@color/white_pressed"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</LinearLayout>
