<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_repeat">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/note_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
</RelativeLayout>